@@ -1,3 +1,7 @@
+2004-12-18  Sergey V. Udaltsov  <svu@gnome.org>
+
+	* gnome-settings-keyboard-xkb.c: reflect changes in libgswitchit
+
 2004-12-16  Bastien Nocera  <hadess@hadess.net>
 
 	* actions/acme-volume-alsa.c: (acme_volume_alsa_set_mute): mute
