@@ -1,3 +1,12 @@
+2004-12-13  Sergey V. Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkb.c,
+	gnome-keyboard-properties-xkb.h,
+	gnome-keyboard-properties-xkblt.c,
+	gnome-keyboard-properties-xkbmc.c,
+	gnome-keyboard-properties-xkbot.c: reflect massive changes in libgswitchit
+
+
 2004-12-09  Sergey V. Udaltsov <svu@gnome.org>
 
 	* gnome-keyboard-properties-xkblt.c: using of the XklGetMaxNumGroups
